# codespaces-blank

./: .gitignore  README.md  generate_customers.py  generate_data.py  patients.csv  pg_copy_tables.py  pyproject.toml  requirements.txt  sample.csv  sample2.csv  simple_data_gen.py  wrapper_customers.csv  wrapper_patients.csv
src/customer_data_generator/: __init__.py  cli.py  generator.py  patient_cli.py  patient_generator.py
src/pg_table_copy/: __init__.py  cli.py
tests/: test_generator.py  test_patient_generator.py  test_simple_data_gen.py
